replaced by postgresql

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [Database]
-DB_PATH = sqlite:///detailed_process_stats.db
+DB_PATH = postgresql+asyncpg://localhost/detailed_process_stats
 
 [Settings]
 UPDATE_INTERVAL = 10
 MONITOR_INTERVAL = 60
+MAX_WORKERS = 10
